fr.n7.stl.minic/src/fr/n7/stl/minic/parser/MiniCParser.java
// Generated from MiniCParser.g4 by ANTLR 4.13.1

package fr.n7.stl.minic.parser;
import java.io.IOException;
import java.io.File;
import java.io.FileInputStream;
import java.io.PrintWriter;
import java.io.IOException;
import fr.n7.stl.minic.ast.*;
import fr.n7.stl.minic.ast.expression.*;
import fr.n7.stl.minic.ast.expression.accessible.*;
import fr.n7.stl.minic.ast.expression.allocation.*;
import fr.n7.stl.minic.ast.expression.assignable.*;
import fr.n7.stl.minic.ast.expression.value.*;
import fr.n7.stl.minic.ast.instruction.*;
import fr.n7.stl.minic.ast.instruction.declaration.*;
import fr.n7.stl.minic.ast.scope.*;
import fr.n7.stl.minic.ast.type.*;
import fr.n7.stl.minic.ast.type.declaration.*;
import fr.n7.stl.util.*;
import fr.n7.stl.tam.ast.*;
import fr.n7.stl.tam.ast.impl.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MiniCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Egal=1, AccoladeOuvrante=2, AccoladeFermante=3, ParentheseOuvrante=4, 
		ParentheseFermante=5, CrochetOuvrant=6, CrochetFermant=7, Point=8, PointInterrogation=9, 
		DeuxPoint=10, Virgule=11, PointVirgule=12, Afficher=13, Si=14, Sinon=15, 
		TantQue=16, Retour=17, DefinitionConstante=18, DefinitionType=19, Enregistrement=20, 
		Enumeration=21, Nouveau=22, Asterisque=23, Oblique=24, PourCent=25, Plus=26, 
		Moins=27, DoubleBarre=28, DoubleEsperluette=29, PointExclamation=30, Inferieur=31, 
		Superieur=32, InferieurEgal=33, SuperieurEgal=34, DoubleEgal=35, ExclamationEgal=36, 
		Esperluette=37, TypeEntier=38, TypeFlottant=39, TypeBooleen=40, TypeCaractere=41, 
		TypeChaine=42, TypeVide=43, Vrai=44, Faux=45, Nul=46, Premier=47, Second=48, 
		Caractere=49, Chaine=50, Identificateur=51, Entier=52, Flottant=53, CommentaireLigne=54, 
		CommentaireBloc=55, WS=56;
	public static final int
		RULE_programme = 0, RULE_bloc = 1, RULE_parametres = 2, RULE_instruction = 3, 
		RULE_atomique = 4, RULE_champ = 5, RULE_etiquettes = 6, RULE_type = 7, 
		RULE_affectable = 8, RULE_expressions = 9, RULE_arguments = 10, RULE_expression = 11, 
		RULE_identifiant = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"programme", "bloc", "parametres", "instruction", "atomique", "champ", 
			"etiquettes", "type", "affectable", "expressions", "arguments", "expression", 
			"identifiant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'{'", "'}'", "'('", "')'", "'['", "']'", "'.'", "'?'", 
			"':'", "','", "';'", "'print'", "'if'", "'else'", "'while'", "'return'", 
			"'const'", "'typedef'", "'struct'", "'enum'", "'new'", "'*'", "'/'", 
			"'%'", "'+'", "'-'", "'||'", "'&&'", "'!'", "'<'", "'>'", "'<='", "'>='", 
			"'=='", "'!='", "'&'", "'int'", "'float'", "'boolean'", "'char'", "'String'", 
			"'void'", "'true'", "'false'", "'null'", "'fst'", "'snd'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Egal", "AccoladeOuvrante", "AccoladeFermante", "ParentheseOuvrante", 
			"ParentheseFermante", "CrochetOuvrant", "CrochetFermant", "Point", "PointInterrogation", 
			"DeuxPoint", "Virgule", "PointVirgule", "Afficher", "Si", "Sinon", "TantQue", 
			"Retour", "DefinitionConstante", "DefinitionType", "Enregistrement", 
			"Enumeration", "Nouveau", "Asterisque", "Oblique", "PourCent", "Plus", 
			"Moins", "DoubleBarre", "DoubleEsperluette", "PointExclamation", "Inferieur", 
			"Superieur", "InferieurEgal", "SuperieurEgal", "DoubleEgal", "ExclamationEgal", 
			"Esperluette", "TypeEntier", "TypeFlottant", "TypeBooleen", "TypeCaractere", 
			"TypeChaine", "TypeVide", "Vrai", "Faux", "Nul", "Premier", "Second", 
			"Caractere", "Chaine", "Identificateur", "Entier", "Flottant", "CommentaireLigne", 
			"CommentaireBloc", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniCParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgrammeContext extends ParserRuleContext {
		public Token name;
		public BlocContext main;
		public TerminalNode Identificateur() { return getToken(MiniCParser.Identificateur, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public ProgrammeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterProgramme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitProgramme(this);
		}
	}

	public final ProgrammeContext programme() throws RecognitionException {
		ProgrammeContext _localctx = new ProgrammeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programme);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			((ProgrammeContext)_localctx).name = match(Identificateur);
			setState(27);
			((ProgrammeContext)_localctx).main = bloc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocContext extends ParserRuleContext {
		public Block b;
		public InstructionContext instruction;
		public List<InstructionContext> instructions = new ArrayList<InstructionContext>();
		public TerminalNode AccoladeOuvrante() { return getToken(MiniCParser.AccoladeOuvrante, 0); }
		public TerminalNode AccoladeFermante() { return getToken(MiniCParser.AccoladeFermante, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public BlocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterBloc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitBloc(this);
		}
	}

	public final BlocContext bloc() throws RecognitionException {
		BlocContext _localctx = new BlocContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(AccoladeOuvrante);
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2269119281848336L) != 0)) {
				{
				{
				setState(30);
				((BlocContext)_localctx).instruction = instruction();
				((BlocContext)_localctx).instructions.add(((BlocContext)_localctx).instruction);
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			match(AccoladeFermante);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametresContext extends ParserRuleContext {
		public List<ParameterDeclaration> l;
		public TypeContext type1;
		public IdentifiantContext ident1;
		public TypeContext type;
		public List<TypeContext> suiteType = new ArrayList<TypeContext>();
		public IdentifiantContext identifiant;
		public List<IdentifiantContext> suiteIdent = new ArrayList<IdentifiantContext>();
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<IdentifiantContext> identifiant() {
			return getRuleContexts(IdentifiantContext.class);
		}
		public IdentifiantContext identifiant(int i) {
			return getRuleContext(IdentifiantContext.class,i);
		}
		public List<TerminalNode> Virgule() { return getTokens(MiniCParser.Virgule); }
		public TerminalNode Virgule(int i) {
			return getToken(MiniCParser.Virgule, i);
		}
		public ParametresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametres; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterParametres(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitParametres(this);
		}
	}

	public final ParametresContext parametres() throws RecognitionException {
		ParametresContext _localctx = new ParametresContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parametres);
		int _la;
		try {
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ParentheseFermante:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case Enregistrement:
			case Enumeration:
			case Inferieur:
			case TypeEntier:
			case TypeFlottant:
			case TypeBooleen:
			case TypeCaractere:
			case TypeChaine:
			case TypeVide:
			case Identificateur:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				((ParametresContext)_localctx).type1 = type();
				setState(40);
				((ParametresContext)_localctx).ident1 = identifiant(0);
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Virgule) {
					{
					{
					setState(41);
					match(Virgule);
					setState(42);
					((ParametresContext)_localctx).type = type();
					((ParametresContext)_localctx).suiteType.add(((ParametresContext)_localctx).type);
					setState(43);
					((ParametresContext)_localctx).identifiant = identifiant(0);
					((ParametresContext)_localctx).suiteIdent.add(((ParametresContext)_localctx).identifiant);
					}
					}
					setState(49);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public Instruction i;
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	 
		public InstructionContext() { }
		public void copyFrom(InstructionContext ctx) {
			super.copyFrom(ctx);
			this.i = ctx.i;
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionReturnContext extends InstructionContext {
		public TerminalNode Retour() { return getToken(MiniCParser.Retour, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PointVirgule() { return getToken(MiniCParser.PointVirgule, 0); }
		public InstructionReturnContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionReturn(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionSiSinonContext extends InstructionContext {
		public BlocContext alors;
		public BlocContext sinon;
		public TerminalNode Si() { return getToken(MiniCParser.Si, 0); }
		public TerminalNode ParentheseOuvrante() { return getToken(MiniCParser.ParentheseOuvrante, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ParentheseFermante() { return getToken(MiniCParser.ParentheseFermante, 0); }
		public TerminalNode Sinon() { return getToken(MiniCParser.Sinon, 0); }
		public List<BlocContext> bloc() {
			return getRuleContexts(BlocContext.class);
		}
		public BlocContext bloc(int i) {
			return getRuleContext(BlocContext.class,i);
		}
		public InstructionSiSinonContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionSiSinon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionSiSinon(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionSiContext extends InstructionContext {
		public BlocContext alors;
		public TerminalNode Si() { return getToken(MiniCParser.Si, 0); }
		public TerminalNode ParentheseOuvrante() { return getToken(MiniCParser.ParentheseOuvrante, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ParentheseFermante() { return getToken(MiniCParser.ParentheseFermante, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public InstructionSiContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionSi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionSi(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionAffichageContext extends InstructionContext {
		public TerminalNode Afficher() { return getToken(MiniCParser.Afficher, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PointVirgule() { return getToken(MiniCParser.PointVirgule, 0); }
		public InstructionAffichageContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionAffichage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionAffichage(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionDeclarationContext extends InstructionContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifiantContext identifiant() {
			return getRuleContext(IdentifiantContext.class,0);
		}
		public TerminalNode Egal() { return getToken(MiniCParser.Egal, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PointVirgule() { return getToken(MiniCParser.PointVirgule, 0); }
		public TerminalNode DefinitionConstante() { return getToken(MiniCParser.DefinitionConstante, 0); }
		public InstructionDeclarationContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionDeclaration(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionTypeDeclarationContext extends InstructionContext {
		public TerminalNode DefinitionType() { return getToken(MiniCParser.DefinitionType, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifiantContext identifiant() {
			return getRuleContext(IdentifiantContext.class,0);
		}
		public TerminalNode PointVirgule() { return getToken(MiniCParser.PointVirgule, 0); }
		public InstructionTypeDeclarationContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionTypeDeclaration(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionFunctionDeclarationContext extends InstructionContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifiantContext identifiant() {
			return getRuleContext(IdentifiantContext.class,0);
		}
		public TerminalNode ParentheseOuvrante() { return getToken(MiniCParser.ParentheseOuvrante, 0); }
		public ParametresContext parametres() {
			return getRuleContext(ParametresContext.class,0);
		}
		public TerminalNode ParentheseFermante() { return getToken(MiniCParser.ParentheseFermante, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public InstructionFunctionDeclarationContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionFunctionDeclaration(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionIterationContext extends InstructionContext {
		public BlocContext body;
		public TerminalNode TantQue() { return getToken(MiniCParser.TantQue, 0); }
		public TerminalNode ParentheseOuvrante() { return getToken(MiniCParser.ParentheseOuvrante, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ParentheseFermante() { return getToken(MiniCParser.ParentheseFermante, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public InstructionIterationContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionIteration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionIteration(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionAffectationContext extends InstructionContext {
		public ExpressionContext valeur;
		public AffectableContext affectable() {
			return getRuleContext(AffectableContext.class,0);
		}
		public TerminalNode Egal() { return getToken(MiniCParser.Egal, 0); }
		public TerminalNode PointVirgule() { return getToken(MiniCParser.PointVirgule, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public InstructionAffectationContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionAffectation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionAffectation(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruction);
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new InstructionDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DefinitionConstante:
					{
					setState(52);
					match(DefinitionConstante);
					}
					break;
				case Enregistrement:
				case Enumeration:
				case Inferieur:
				case TypeEntier:
				case TypeFlottant:
				case TypeBooleen:
				case TypeCaractere:
				case TypeChaine:
				case TypeVide:
				case Identificateur:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(56);
				type();
				setState(57);
				identifiant(0);
				setState(58);
				match(Egal);
				setState(59);
				expression(0);
				setState(60);
				match(PointVirgule);
				}
				break;
			case 2:
				_localctx = new InstructionTypeDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(DefinitionType);
				setState(63);
				type();
				setState(64);
				identifiant(0);
				setState(65);
				match(PointVirgule);
				}
				break;
			case 3:
				_localctx = new InstructionFunctionDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				type();
				setState(68);
				identifiant(0);
				setState(69);
				match(ParentheseOuvrante);
				setState(70);
				parametres();
				setState(71);
				match(ParentheseFermante);
				setState(72);
				bloc();
				}
				break;
			case 4:
				_localctx = new InstructionAffectationContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				affectable(0);
				setState(75);
				match(Egal);
				setState(76);
				((InstructionAffectationContext)_localctx).valeur = expression(0);
				setState(77);
				match(PointVirgule);
				}
				break;
			case 5:
				_localctx = new InstructionAffichageContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				match(Afficher);
				setState(80);
				expression(0);
				setState(81);
				match(PointVirgule);
				}
				break;
			case 6:
				_localctx = new InstructionSiSinonContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(83);
				match(Si);
				setState(84);
				match(ParentheseOuvrante);
				setState(85);
				expression(0);
				setState(86);
				match(ParentheseFermante);
				setState(87);
				((InstructionSiSinonContext)_localctx).alors = bloc();
				setState(88);
				match(Sinon);
				setState(89);
				((InstructionSiSinonContext)_localctx).sinon = bloc();
				}
				break;
			case 7:
				_localctx = new InstructionSiContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(91);
				match(Si);
				setState(92);
				match(ParentheseOuvrante);
				setState(93);
				expression(0);
				setState(94);
				match(ParentheseFermante);
				setState(95);
				((InstructionSiContext)_localctx).alors = bloc();
				}
				break;
			case 8:
				_localctx = new InstructionReturnContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(97);
				match(Retour);
				setState(98);
				expression(0);
				setState(99);
				match(PointVirgule);
				}
				break;
			case 9:
				_localctx = new InstructionIterationContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(101);
				match(TantQue);
				setState(102);
				match(ParentheseOuvrante);
				setState(103);
				expression(0);
				setState(104);
				match(ParentheseFermante);
				setState(105);
				((InstructionIterationContext)_localctx).body = bloc();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
